force-app/main/default/objects/EQCC_Step__c.object
<CustomObject>
    <fields>
        <fullName>FormNameLWC__c</fullName>
        <formula>Header_Sheet__r.Sheet__r.formNameLWC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FormNameLWC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Code__c</fullName>
        <label>Form Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Group__c</fullName>
        <formula>Header_Sheet__r.Sheet__r.Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Header Sheet</label>
        <referenceTo>Header_Sheet__c</referenceTo>
        <relationshipLabel>EQCC Steps</relationshipLabel>
        <relationshipName>EQCC_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores percentage for Step</description>
        <label>Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Needs Revision</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jsonString__c</fullName>
        <label>jsonString</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <label>EQCC Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Header_Sheet__c</columns>
        <columns>Form_Code__c</columns>
        <columns>IsDeleted__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Header_Sheet__c</field>
            <operation>equals</operation>
            <value>HS-13875</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ENEM_Co_Or_ENEM_Communi_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM Co-Or-ENEM-Communi/Thai oil group</label>
        <queue>ENEM_Co_Or_ENEM_Communi_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENEM_Co_Or_ENEM_Distru_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM Co-Or-ENEM-Distru/Thai oil group</label>
        <queue>ENEM_Co_Or_ENEM_Distru_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENEM_Co_Or_ENEM_T_SPP_TP_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM Co-Or-ENEM-T/SPP&amp;TP/Thai oil group</label>
        <queue>ENEM_Co_Or_ENEM_T_SPP_TP_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENEM_Co_Or_ENEM_Workshop_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM Co-Or-ENEM-Workshop/Thai oil group</label>
        <queue>ENEM_Co_Or_ENEM_Workshop_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENEM_Op_ENEM_Communi_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM Op-ENEM-Communi/Thai oil group</label>
        <queue>ENEM_Op_ENEM_Communi_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENEM_Op_ENEM_Distrution_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM Op-ENEM-Distrution/Thai oil group</label>
        <queue>ENEM_Op_ENEM_Distrution_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENEM_Op_ENEM_T_SPP_TP_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM Op-ENEM-T/SPP&amp;TP/Thai oil group</label>
        <queue>ENEM_Op_ENEM_T_SPP_TP_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENEM_Op_ENEM_Workshop_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM Op-ENEM-Workshop/Thai oil group</label>
        <queue>ENEM_Op_ENEM_Workshop_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENEM_TL_ENEM_Communi_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM TL-ENEM-Communi/Thai oil group</label>
        <queue>ENEM_TL_ENEM_Communi_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENEM_TL_ENEM_Distrution_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM TL-ENEM-Distrution/Thai oil group</label>
        <queue>ENEM_TL_ENEM_Distrution_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENEM_TL_ENEM_T_SPP_TP_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM TL-ENEM-T/SPP&amp;TP/Thai oil group</label>
        <queue>ENEM_TL_ENEM_T_SPP_TP_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENEM_TL_ENEM_Workshop_Thai_oil_group_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM TL-ENEM-Workshop/Thai oil group</label>
        <queue>ENEM_TL_ENEM_Workshop_Thai_oil_group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENIM_Co_Or_ENIM_IC_PLC_General_PLC_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENIM Co-Or-ENIM-IC PLC/General PLC</label>
        <queue>ENIM_Co_Or_ENIM_IC_PLC_General_PLC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENIM_Co_Or_ENIM_IS_Instr_EQCC_Step</fullName>
        <filterScope>Queue</filterScope>
        <label>ENIM Co-Or-ENIM-IS Instr</label>
        <queue>ENIM_Co_Or_ENIM_IS_Instr</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>